# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_cargo_crate("lib") {
  crate_name = "url"
  crate_type = "rlib"
  crate_root = "src/lib.rs"

  sources = [ "src/lib.rs" ]
  edition = "2018"
  cargo_pkg_version = "2.3.1"
  cargo_pkg_authors = "The rust-url developers"
  cargo_pkg_name = "url"
  cargo_pkg_description =
      "URL library for Rust, based on the WHATWG URL Standard"
  deps = [
    "//third_party/rust/crates/rust-url/form_urlencoded:lib",
    "//third_party/rust/crates/rust-url/idna:lib",
    "//third_party/rust/crates/rust-url/percent_encoding:lib",
  ]
  features = [ "default" ]
}
